examples/test/testpolicy17337.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17337
  namespace: namespace377
spec:
  podSelector:
    matchLabels:
      key19: value7
      key43: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value29
      podSelector:
        matchLabels:
          key10: value43
          key4: value10
